<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SkyLines Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="status">Status:</string>
    <string name="live_tracking">Live Tracking</string>
    <string name="empty">Off</string>
    <string name="pref_live_tracking_title">Live Tracking</string>
    <string name="pref_system_settings_title">System Settings</string>
    <string name="title_activity_about">About</string>
    <string name="about_text">SkyLines Tracker</string>
    <string name="version_name_label">Version:</string>
    <string name="not_available">not available</string>
    <string name="msg_pos_sent" translatable="false">GPS ok</string>
    <string name="on">Waiting for GPS</string>
    <string name="off">Off</string>
    <string name="resume">Waiting for GPS</string>
    <string name="msg_no_inet">No internet connection</string>
    <string name="queue">Queue:</string>
    <string name="queue_values" translatable="false"/>
    <string name="position">Position:</string>
    <string name="run_in_background">running in background</string>
    <string name="location_permission_title">Location Permission</string>
    <string name="needs_to_collect_location_data">"SkyLines Tracker needs to collect location data to enable sending
        position, even when the app is in the background "
    </string>
    <string name="continue_dialog">Continue</string>


</resources>
