<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

<CheckBox
            android:id="@+id/checkLiveTracking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/live_tracking"
            android:minHeight="48dp"/>

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/checkLiveTracking"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        <TableRow android:layout_width="match_parent"
                  android:layout_height="match_parent">
            <TextView
                    android:id="@+id/statusLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    tools:ignore="TextContrastCheck"/>
            <TextView
                    android:id="@+id/statusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:id="@+id/positionLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/position"/>
            <TextView
                    android:id="@+id/positionValueText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:id="@+id/queueLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/queue"/>
            <TextView
                    android:id="@+id/queueValueText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/queue_values"/>
        </TableRow>
    </TableLayout>


</RelativeLayout>